--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firstnonrepeated",
   "version": "1.0.0",
-  "description": "",
+  "description": "The First Non Repeated Character In A String kata",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
